# trafficmon

./: Cargo.toml  Makefile
.github/workflows/: build-openwrt.yml  build-openwrt.yml.ok  build-openwrtipk.yml  buildipk.yml  buildipk.yml.old  buildipk.yml.tmp  buildipknew.yml  makeipk.yml
config/: trafficmon.conf
files/: trafficemon.init
openwrt/: Makefile
openwrt/CONTROL/: control
openwrt/files/etc/config/: trafficmon
openwrt/files/etc/init.d/: trafficmon
src/: Cargo.toml  classifier.rs  config.rs  main.rs  main.rs.bak  nftables.rs  stats.rs
