[package]
name = "trafficmon"
version = "0.3.0"
edition = "2021"

[dependencies]
pcap = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
chrono = { version = "0.4", features = ["serde"] }
syslog = "4.0"
libc = "0.2"
signal-hook = "0.3"
regex = "1.5"
anyhow = "1.0"